backend upload build

--- a/backend/default-password-warning.html
+++ b/backend/default-password-warning.html
@@ -38,7 +38,7 @@
                                         <br />
                                         <br />
                                         <p>
-                                            <a href="#" data-toggle="modal" data-target="#exampleModal">Lets Get Started</a>
+                                            <a href="#" data-toggle="modal" data-target="#exampleModal">Default Password Warning</a>
                                         </p>
                                     </div>
                                 </div>
@@ -55,18 +55,23 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="col-lg-5 modal-wrapper-xl lets-get-width-modal  mx-auto">
+            <div class="col-lg-5 modal-wrapper-xl1 default-password-small-width-modal  mx-auto">
                 <div class="modal-content">
                     <div class="modal-body">
                         <div
-                            class="lets-get-started-modal-wrapper">
-                            <div class="lets-get-modal-header">
-                                <div class="adapter-modal-name ">
-                                    Lets Get Started
-                                    <p>Please find some helpful hints below to get you started</p>
+                            class="add-user-modal adding-adapter-wrapper modal-query-wizard-wrapper modal-add-connections-wrapper">
+                            <div class="adding-adapter-modal-header">
+                                <div class="adapter-modal-name ml-0">
+                                    Default Password Warning
                                 </div>
 
-                                <div class="lets-get-close">
+                                <div class="adapter-modal-help-box">
+                                    <a href="#" class="question-icon hidden">
+                                        ?
+                                    </a>
+                                    <a href="#" class="adapter-modal-help-link hidden">
+                                        Help
+                                    </a>
                                     <button type="button" class="close no-btn modal-close-btn" data-dismiss="modal">
                                         <span>
                                             <img src="images/modal-close.svg" />
@@ -75,7 +80,7 @@
                                 </div>
                             </div>
 
-                            <div class="lets-get-modal-content-box pb-4">
+                            <div class="adapter-modal-content-box pb-4">
 
                                 <div class="adapter-modal-field-row mt-1">
                                     <div class="note-alert-mesg" >
@@ -86,11 +91,11 @@
 
 
                                 <div class="checkbox-with-text-row mb-4">
-                                    <div><input type="radio" name="a" value="a"></div>
+                                    <div><input type="radio" name="a" id="rbt_change_password" value="a" checked></div>
                                     <div class="label-div mr-3 mb-3">
                                         Change Default Password
                                     </div>
-                                    <div><input type="radio" name="a" value="b"></div>
+                                    <div><input type="radio" name="a" id="rbt_change_password" value="b"></div>
                                     <div class="label-div mr-3 mb-3">
                                         Keep Default Password
                                     </div>
@@ -103,27 +108,27 @@
                                 <div class="adapter-modal-field-row">
                                     <div class="">
                                         <label>New Password</label>
-                                        <input type="text" class="field-large" placeholder="" />
+                                        <input type="text" id="input_new_password" class="field-large" placeholder="" />
                                     </div>
                                 </div>
                                 <div class="adapter-modal-field-row mt-3">
                                     <div class="">
                                         <label>Confirm Password</label>
-                                        <input type="text" class="field-large" placeholder="" />
+                                        <input type="text" id="input_confirm_password" class="field-large" placeholder="" />
                                     </div>
                                 </div>
 
                                 <div class="default-password-modal-bottom-row">
                                     <div class="checkbox-with-text-row">
-                                        <div><input type="checkbox"></div>
+                                        <div><input type="checkbox" id="chk_do_not_show_warning_again"></div>
                                         <div class="label-div">
-                                            Don’t show this message again 
+                                            Do not show this warning again
                                         </div>
                                         
 
                                     </div>
                                     <div class="default-pass-btn-div">
-                                        <button type="button" class="btn-continue">
+                                        <button type="button" id="btn_continue" class="theme-btn graydient-primary-btn">
                                             Continue
                                         </button>
                                     </div>
