--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </tr>
                     <tr>
                       <td>Lets Get Started </td>
-                      <td><a href="#" target="_blank">Html</a></td>
+                      <td><a href="lets-get-started.html" target="_blank">Html</a></td>
 
                       <td> <a href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/434737842_Lets_Get_Started_-_Popup" target="_blank"> Design</a></td>
                     </tr>
