--- a/lets-get-started.html
+++ b/lets-get-started.html
@@ -101,7 +101,7 @@
                                     </div>
                                    
                                 </div>
-
+                                <h6>Welcome Aboard and lets Start the Journey of Discovering and Protecting your Assets</h6>
                                 <div class="default-password-modal-bottom-row">
                                     <div class="checkbox-with-text-row">
                                         <div><input type="checkbox"></div>
