--- a/system-settings-new.html
+++ b/system-settings-new.html
@@ -852,7 +852,7 @@
                                    
                                 </div>
 
-                                <div class="field-section mt-4">
+                                <div class="field-section static-routes-div mt-4">
                                   <h3 class="mb-3 ">Static Routes</h3>
 
                                   <div class="d-flex">
