--- a/dashboard-new-items.html
+++ b/dashboard-new-items.html
@@ -336,7 +336,7 @@
                         <a class="dropdown-item" href="#"><strong>System Dashboard</strong></a>
                         <a class="dropdown-item" href="#">Dashboard 1</a>
                       <a class="dropdown-item" href="#">Dashboard 2</a>
-                      <a class="dropdown-item" href="#"><img src="images/plus+.png" style="" />Create New</a>
+                      <a class="dropdown-item" href="#"><img src="images/icon-plus-normal.svg" style="" />Add Dashboard</a>
                     </div>
                   </div>
                   <div class="dashboard-icons-div">
