--- a/create-widget.html
+++ b/create-widget.html
@@ -38,7 +38,7 @@
                                         <br />
                                         <br />
                                         <p>
-                                            <a href="#" data-toggle="modal" data-target="#exampleModal">Create Dashboard</a>
+                                            <a href="#" data-toggle="modal" data-target="#exampleModal">Create Widget</a>
                                         </p>
                                     </div>
                                 </div>
@@ -62,7 +62,7 @@
                             class="add-user-modal adding-adapter-wrapper modal-query-wizard-wrapper modal-add-connections-wrapper">
                             <div class="adding-adapter-modal-header">
                                 <div class="adapter-modal-name ml-0">
-                                    Create Dashboard
+                                    Create Widget
                                 </div>
 
                                 <div class="adapter-modal-help-box">
