--- a/dashboard-new-items.html
+++ b/dashboard-new-items.html
@@ -551,6 +551,25 @@
               <div class="dashboard-widget-container">
                 <div class="dashboard-grid-widgets" id="macy-container">
                   <div class="widget-box">
+                    <div class="widget-icons-div">
+                      <a href="#"><img src="images/widget-refresh-icon.svg" /></a>
+                      <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false"><img src="images/widget -3-dots-icon.svg" /></a>
+                     
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <div class="pointer-top-img">
+                            <img src="images/dropdown_pointer_top.png" />
+                          </div>
+                          <a class="dropdown-item" href="#">Edit</a>
+                          <a class="dropdown-item" href="#">Delete</a>
+                        <a class="dropdown-item" href="#">Apply Filter</a>
+                        <a href="#" class="dropdown-item">Set Refresh Rate</a>
+                        <a href="#" class="dropdown-item">Clone</a>
+                        <a href="#" class="dropdown-item">Export To CSV</a>                     
+                      
+                      </div>
+
+                    </div>
                     <div class="widget-left-col">
                       <div class="widget-heading">
                         Endpoint Protection Coverage
