--- a/dashboard-new-items.html
+++ b/dashboard-new-items.html
@@ -385,12 +385,12 @@
                 </div>
               </div>
 
-              <div class="device-disclosure">
-                <div class="heading">
-                  Device Disclosure
+              <div class="device-disclosure mt-2">
+                <div class="heading-big">
+                  Dashboard
                 </div>
 
-                <div id="scroll" class="device-disclose-scroll-box">
+                <!-- <div id="scroll" class="device-disclose-scroll-box">
                   <div class="device-box">
                     <div class="device-box-main-text">
                       216
@@ -545,11 +545,11 @@
                       <img src="images/aws_logo.png" />
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
 
               <div class="dashboard-widget-container">
-                <div class="dashboard-grid-widgets" id="macy-container">
+                <div class="dashboard-grid-widgets mt-0" id="macy-container">
                   <div class="widget-box">
                     <div class="widget-icons-div">
                       <a href="#"><img src="images/widget-refresh-icon.svg" /></a>
