--- a/dashboard-new-items.html
+++ b/dashboard-new-items.html
@@ -319,8 +319,8 @@
         <div class="dashboard-left-section mb-5">
           <section id="content">
             <div class="section-wrapper mt-5">
-              <div class="row dashboard-top-section">
-                <div class="col-lg-4 dashoard-dropdwon-btns-div">
+              <div class="row dashboard-top-section dashboard-top-sec-new">
+                <div class=" dashoard-dropdwon-btns-div">
                   <div class="dropdown dashboard-dropdown-menu">
                     <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -350,7 +350,7 @@
                         aria-haspopup="true" aria-expanded="false">
                             <img src="images/more-btn-icon.svg" alt="">
                         </a>
-                        <div class="dropdown-menu dashboard-title-menu-dropdown" aria-labelledby="dropdownMenuButton">
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="#">Add Widget</a>
                           <a class="dropdown-item" href="#">Customize</a>
                           <a class="dropdown-item" href="#">Share</a>
@@ -360,7 +360,7 @@
                   </div>
                 </div>
 
-                <div class="col-lg-8 dashboard-search dashboard-search-with-dropdown">
+                <div class=" dashboard-search dashboard-search-with-dropdown">
                     <div class="dropdown dashboard-dropdown-menu">
                         <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                           aria-haspopup="true" aria-expanded="false">
