--- a/create-dashboard.html
+++ b/create-dashboard.html
@@ -72,7 +72,7 @@
                                     <a href="#" class="adapter-modal-help-link hidden">
                                         Help
                                     </a>
-                                    <button type="button" class="close no-btn modal-close-btn" data-dismiss="modal">
+                                    <button id="btn_closeIcon" type="button" class="close no-btn modal-close-btn" data-dismiss="modal">
                                         <span>
                                             <img src="images/modal-close.svg" />
                                         </span>
@@ -85,7 +85,7 @@
                                 <div class="adapter-modal-field-row">
                                     <div class="">
                                         <label>Dashboard Name</label>
-                                        <input type="text" class="field-large" placeholder="" />
+                                        <input id="input_dashboardName" type="text" class="field-large" placeholder="" />
                                     </div>
                                 </div>
                                 <!-- <div class="adapter-modal-field-row mt-3">
@@ -108,10 +108,10 @@
 
                                 <div class="adapter-modal-bottom-row mt-3">
                                     <div style="margin: 0px;">
-                                        <button type="button" class="cancel-btn">
+                                        <button id="btn_cancel" type="button" class="cancel-btn">
                                             Cancel
                                         </button>
-                                        <button type="button" class="theme-btn graydient-primary-btn">
+                                        <button id="btn_save" type="button" class="theme-btn graydient-primary-btn">
                                             Save
                                         </button>
                                     </div>
