--- a/dashboard-new-items.html
+++ b/dashboard-new-items.html
@@ -351,6 +351,9 @@
                             <img src="images/more-btn-icon.svg" alt="">
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <div class="pointer-top-img">
+                            <img src="images/dropdown_pointer_top.png" />
+                          </div>
                             <a class="dropdown-item" href="#">Add Widget</a>
                           <a class="dropdown-item" href="#">Customize</a>
                           <a class="dropdown-item" href="#">Share</a>
