--- a/create-widget.html
+++ b/create-widget.html
@@ -109,7 +109,7 @@
                                     <div class="two-col-grid">
                                         <div class="flex-50">Widget Presentation</div>
                                         <div>
-                                            <div id="dd ddl_pieSelect" class="dropdown-with-img" tabindex="1">
+                                            <div id="dd" class="dropdown-with-img" tabindex="1">
                                                 <div class="dropdown-with-img-select v-line-space">
                                                   <div class="select-top-header">
                                                     <div class="dropdown-logo">
@@ -124,10 +124,10 @@
                                                     <li>
                                                       <a href="#">
                                                         <div class="dropdown-logo">
-                                                            <img src="images/icon-pie-chart.svg">
+                                                            <img src="images/chart-curve.svg">
                                                         </div>
                                                         <div>
-                                                          Pie
+                                                          Chart Curve
                                                         </div>
                                                       </a>
                                                     </li>
@@ -135,10 +135,10 @@
                                                     <li>
                                                         <a href="#">
                                                           <div class="dropdown-logo">
-                                                              <img src="images/icon-pie-chart.svg">
+                                                              <img src="images/bar-chart-vertical.svg">
                                                           </div>
                                                           <div>
-                                                            Pie
+                                                            Bar Chart
                                                           </div>
                                                         </a>
                                                       </li>
@@ -146,10 +146,10 @@
                                                       <li>
                                                         <a href="#">
                                                           <div class="dropdown-logo">
-                                                              <img src="images/icon-pie-chart.svg">
+                                                              <img src="images/bar-chart-slim.svg">
                                                           </div>
                                                           <div>
-                                                            Pie
+                                                            Bsar Chart Small
                                                           </div>
                                                         </a>
                                                       </li>
@@ -165,13 +165,13 @@
                                         <div>
                                             <div class="checkbox-with-text-row ">
                                                 <div class="width-auto">
-                                                    <input id="chk_assets" type="radio" name="a" value="a">
+                                                    <input id="rbt_assets" type="radio" name="a" value="a">
                                                 </div>
                                                 <div class="label-div mr-3 width-auto">
                                                     Assets
                                                 </div>
                                                 <div class="width-auto">
-                                                    <input id="chk_users" checked="" type="radio" name="a"
+                                                    <input id="rbt_users" checked="" type="radio" name="a"
                                                         value="b"></div>
                                                 <div class="label-div ">
                                                     Users
@@ -195,7 +195,7 @@
                                         <!-- <input id="input_hostName" type="text" class="form-control"
                                             placeholder="Yellow Dropdown"> -->
 
-                                            <div id="ddd ddl_colorSelect" class="dropdown-with-img" tabindex="1">
+                                            <div id="ddd" class="dropdown-with-img" tabindex="1">
                                                 <div class="dropdown-with-img-select v-line-space" style="height: 33px;">
                                                     <div class="select-top-header">
                                                         <div class="dropdown-logo">
