--- a/dashboard-new-items.html
+++ b/dashboard-new-items.html
@@ -341,7 +341,7 @@
                   </div>
                   <div class="dashboard-icons-div">
                       <span>
-                          <a href="">
+                          <a href="#" id="link_plsuBtn">
                               <img src="images/plus-btn-icon.svg" alt="">
                           </a>
                       </span>
@@ -383,7 +383,7 @@
                          
                         </div>
                       </div>
-                  <input type="text" placeholder="Search by Host Name, User Name, Manufacturer Serial MAC or IP..."
+                  <input type="text" id="input_searchBar" placeholder="Search by Host Name, User Name, Manufacturer Serial MAC or IP..."
                     class="search-field" />
                 </div>
               </div>
@@ -555,7 +555,7 @@
                 <div class="dashboard-grid-widgets mt-0" id="macy-container">
                   <div class="widget-box">
                     <div class="widget-icons-div">
-                      <a href="#"><img src="images/widget-refresh-icon.svg" /></a>
+                      <a href="#" id="link_refreshIcon"><img src="images/widget-refresh-icon.svg" /></a>
                       <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false"><img src="images/widget -3-dots-icon.svg" /></a>
                      
@@ -674,13 +674,13 @@
                   </div>
                 </div>
 
-                <div class="widget-add-module">
+                <!-- <div class="widget-add-module">
                   <a href="#">
                     <img src="images/icon-add-module.svg" />
 
                     Add Module
                   </a>
-                </div>
+                </div> -->
               </div>
             </div>
             <!-- Section ends here -->
